--- a/src/styles/InputField.module.css
+++ b/src/styles/InputField.module.css
@@ -6,14 +6,14 @@
   .Label {
     font-size: 14px;
     margin-left: 6px;
-    color: gray;
+    color: rgb(50, 50, 50);
   }
 
 
   input {
     font-size: 14px;
     padding: 2px 6px;
-    border: gray 1px solid;
+    border: rgb(50, 50, 50) 1px solid;
     border-radius: 6px;
     outline: none;
   }
