--- a/src/styles/InputGroup.module.css
+++ b/src/styles/InputGroup.module.css
@@ -1,5 +1,6 @@
 .InputGroup {
   display: flex;
   flex-wrap: wrap;
-  gap: 22px;
+  gap: 16px;
+  margin-bottom: 30px;
 }
